# PortMaster-Build-Templates

./: .gitattributes  LICENSE  README.md  cspell.json
.claude/: settings.json
.github/docker/: pm_dockerfile.20.04.aarch64  pm_dockerfile.24.04.aarch64  pm_dockerfile.aarch64  pm_dockerfile.aarch64_bak  pm_dockerfile.bullseye.aarch64  pm_dockerfile.x86_64  pm_dockerfile_24.04.aarch64
.github/workflows/: .build4pm.yml.kate-swp  .build_cache_recipe_multi.yml.kate-swp  .test4pm.yml.kate-swp  build.yml  build4pm.yml  build_cache_recipe.yml  build_cache_recipe_multi.yml  build_recipe.yml  build_test.yml  buildrecipe.yml  check_recipe_updates.yml  input_test.yml  multi_arch_build.yml  test4pm.yml
.github/workflows/docker/: pm_dockerfile.aarch64
docker/: pm_dockerfile.x86_64
latest/: Shamogu.sh
new_ports/animalcrossing/animalcrossing/: Unofficial Linux PC Port of Animal Crossing Gamecube.sh
new_ports/animalcrossing/source/: .gitignore  LICENSE  README.md  build_make.sh  build_ninja.sh  build_windows.sh  configure.py  deploy.sh  release.sh
new_ports/animalcrossing/source/pc/: CMakeLists.txt  version_script.lds
new_ports/animalcrossing/source/pc/cmake/: Toolchain-aarch64-linux-gnu.cmake  Toolchain-arm-linux-gnueabihf.cmake  Toolchain-linux32.cmake  Toolchain-mingw32.cmake
new_ports/animalcrossing/source/pc/include/: pc_assets.h  pc_audio_ptr.h  pc_bswap.h  pc_diag.h  pc_disc.h  pc_gbi_ptr.h  pc_gx_internal.h  pc_keybindings.h  pc_model_viewer.h  pc_overlay.h  pc_platform.h  pc_save_bswap.h  pc_settings.h  pc_types.h  pc_typing.h
new_ports/animalcrossing/source/pc/lib/glad/include/glad/: gl.h  gles2.h
new_ports/animalcrossing/source/pc/res/: app.rc
new_ports/animalcrossing/source/pc/shaders/: default.frag
new_ports/animalcrossing/source/pc/src/: glibc_compat.c  pc_aram.c  pc_assets.c  pc_audio.c  pc_card.c  pc_disc.c  pc_dvd.c  pc_gx.c  pc_gx_tev.c  pc_gx_texture.c  pc_keybindings.c  pc_m_card.c  pc_main.c  pc_misc.c  pc_model_viewer.c  pc_mtx.c  pc_os.c  pc_overlay.c  pc_pad.c  pc_save_bswap.c  pc_settings.c  pc_stubs_cpp.cpp  pc_typing.c  pc_vi.c
new_ports/animalcrossing/source/pc/tools/: gen_runtime_assets.py
new_ports/defendguin/: Defendguin.sh
new_ports/defendguin/defendguin/: README.md  defendguin.20.04.aarch64  defendguin.aarch64
new_ports/edgar/edgar/: Edgar.sh  The Legend of Edgar.sh
new_ports/edgar/source/: .gitignore  makefile
new_ports/epiphany/: Epiphany.sh
new_ports/epiphany/epiphany/: Epiphany.sh  epiphany-game.24.04.aarch64  epiphany-game.aarch64  epiphany-game.x86_64
new_ports/epiphany/source/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  configure~
new_ports/harmonist/: Harmonist.sh
new_ports/harmonist/harmonist/: harmonist.aarch64  harmonist.x86_64  port.json
new_ports/harmonist/source/: .gitignore  CHANGES.md  README.md  actions.go  animation.go  autoexplore.go  colors.go  combat.go  draw.go  dump.go  encoding.go  events.go  fov.go  game.go  game_test.go  go.mod  harmonist.6  images.go  io.go  js.go  log.go  lore.go  magaras.go  main.go  map.go  mapgen.go  mapgen_test.go  model.go  mongen.go  monster.go  neighbors.go  objects.go  path.go  player.go  pos.go  sdl.go  stats.go  status.go  target.go  tcell.go  (+4 more)
new_ports/monkeyx/: Monkeyx.sh
new_ports/monkeyx/monkeyx/: port.json
new_ports/scavenger/: Scavenger.sh
new_ports/scavenger/scavenger/: port.json  sdlscav.24.04.aarch64  sdlscav.aarch64  sdlscav.x86_64
new_ports/shamogu/: Shamogu.sh  port.json
new_ports/shamogu/shamogu/: Shamogu.sh  port.json  shamogu.20.04.aarch64  shamogu.24.04.aarch64  shamogu.aarch64  shamogu.bullseye.aarch64  shamogu.x86_64
new_ports/shamogu/source/: CHANGES.md  README.md  actions.go  actor.go  animation.go  auto.go  combat.go  draw.go  dump.go  effects.go  encoding.go  entgen.go  entities.go  fov.go  game.go  go.mod  go.sum  images.go  io.go  items.go  js.go  log.go  main.go  map.go  mapgen.go  mapgen_test.go  menu.go  model.go  mods.go  monsters.go  paths.go  player.go  procinfo.go  runictraps.go  sdl.go  status.go  target.go  tiles.go  update.go  utils.go  (+1 more)
new_ports/sip2/sip2/: Space Invaders Part 2.sh
new_ports/sip2/source/: .gitignore  README.md  engine.config  main.cpp  pixiretro.cpp  spaceinvaders.cpp  spaceinvaders.h  todo
new_ports/soh/: Ship of Harkinian.sh
new_ports/soh/soh/: port.json  soh.o2r
new_ports/soh/source/: .gitignore  CMakeLists.txt
new_ports/soh2/: Ship of Harkinian 2.sh
new_ports/soh2/soh2/: port.json
new_ports/soh2/source/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  run-clang-format.ps1
new_ports/spaghettikart/source/: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  vcpkg.json
new_ports/spaghettikart/spaghettikart/: SpaghettiKart.sh
new_ports/stuntcarracer/: Stunt Car Racer.sh
new_ports/stuntcarracer/stuntcarracer/: port.json  stuntcarracer.24.04.aarch64  stuntcarracer.aarch64  stuntcarracer.x86_64
new_ports/templates/port_template/: zz_Port.sh
ports/: .gitignore  CHANGES.md  README.md  animation.go  auto.go  colors.go  combat.go  draw.go  entgen.go  fov.go  go.sum  images.go  io.go  items.go  main.go  map.go  mapgen.go  menu.go  model.go  paths.go  runictraps.go  tcell.go  tiles.go  update.go  vaults.go
ports/data/: small-vaults.txt
ports/docs/: shamogu.6
ports/play-wasm/: index.html  style.css
ports/scripts/: drawtile
ports/shamogu/: Shamogu.sh  effects.go  encoding.go  mapgen_test.go  monsters.go  pager.go  player.go  procinfo.go  sdl.go  status.go  utils.go
ports/shamogu/data/: big-vaults.txt
ports/shamogu/shamogu/: port.json  shamogu.aarch64  shamogu.md  shamogu.x86_64
recipes/: create_pm_svg.sh  new_recipe.sh  recipe.sh
recipes/files/: epiphany_recipe.json  harmonist_recipe.json  scavenger_recipe.json  shamogu_recipe.json  stuntcarracer_recipe.json
recipes/files/shamogu/: .build.sh.kate-swp  build.sh
recipes/ports/: shamogu_recipe.json
recipes/ports/animalcrossing/: build.sh  recipe.json
recipes/temp/: build.sh  pre.sh
releases/: port_stats_raw.json  ports.json  ports_status.json
(+5403 files in other folders)
